--- a/coming-soon.html
+++ b/coming-soon.html
@@ -47,7 +47,7 @@
             <div class="row justify-content-center">
                 <div class="coming-soon-content mx-auto align-content-center">
                     <a href="index.html" class="logo">
-                        <img src="assets/images/SWS_LIGHT.png" alt="simply web solutions logo">
+                        <img src="assets/images/SWS_LIGHT.webp" alt="simply web solutions logo">
                     </a>
                     <h2>We are launching soon</h2>
 
