--- a/landing/website-design-sydney.html
+++ b/landing/website-design-sydney.html
@@ -71,7 +71,8 @@
             <div class="container">
                 <nav class="navbar navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="../index.html">
-                        <img style="max-width:250px; max-height:150px;" src="../assets/images/SWS_LIGHT.webp" alt="logo">
+                        <img style="max-width:250px; max-height:150px;" src="../assets/images/SWS_LIGHT.webp"
+                            alt="logo">
                     </a>
 
                     <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
@@ -849,7 +850,7 @@
     <!-- End Go Top -->
 
     <!-- Links of JS files -->
-    <script src="../assets/js/jquery.min.js"></script>
+    <!---- <script src="../assets/js/jquery.min.js"></script> -->
     <script src="../assets/js/bootstrap.bundle.min.js"></script>
     <script src="../assets/js/jquery.meanmenu.js"></script>
     <script src="../assets/js/owl.carousel.min.js"></script>
