--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
     <!-- End Go Top -->
 
     <!-- Links of JS files -->
-    <!--<script src="assets/js/jquery.min.js"></script> -->
+    <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/jquery.meanmenu.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
